--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,6 +9,17 @@
   display: flex;
 }
 
+.wrapper::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(165deg, #102442 5%, #011627 60%);
+}
+
 .content {
   margin: auto;
 }
