--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,6 @@
 :root {
   --secondary: #fff;
-  --background: #011627;
+  --background: #0d1117;
 }
 
 html,
@@ -22,17 +22,6 @@ body {
   z-index: -1;
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 40rem;
-  background: linear-gradient(165deg, #102442 5%, transparent 60%);
-}
-
 /* Scrollbar styling - Firefox */
 html {
   scrollbar-width: thin;
@@ -47,13 +36,13 @@ html::-webkit-scrollbar-track {
   background-color: rgba(0, 0, 0, 0);
 }
 html::-webkit-scrollbar-thumb {
-  background: var(--secondary);
+  background: #5F62AB;
   border-radius: 12px;
   border: 3px solid var(--background);
   transition: all 0.2s ease-in-out;
 }
 html::-webkit-scrollbar-thumb:hover {
-  background: var(--accent);
+  background: #fff;
 }
 
 a {
