--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,6 @@
-:root {
-  --secondary: #fff;
-  --background: #0d1117;
-}
+/*
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*/
 
 html,
 body {
@@ -11,39 +10,17 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  color: var(--secondary);
+  color: #fff;
+  background: #242424;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-weight: 300;
-  background: var(--background);
   scroll-behavior: smooth;
-  font-size: 17px;
+  font-size: 16px;
 
   z-index: -1;
 }
 
-/* Scrollbar styling - Firefox */
-html {
-  scrollbar-width: thin;
-  scrollbar-color: var(--secondary) var(--background);
-}
-
-/* Scrollbar styling - Chromium, Webkit */
-html::-webkit-scrollbar {
-  width: 12px;
-}
-html::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0);
-}
-html::-webkit-scrollbar-thumb {
-  background: #5F62AB;
-  border-radius: 12px;
-  border: 3px solid var(--background);
-  transition: all 0.2s ease-in-out;
-}
-html::-webkit-scrollbar-thumb:hover {
-  background: #fff;
-}
 
 a {
   text-decoration: none;
@@ -52,12 +29,13 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
 code {
   line-break: anywhere;
 }
 code.bg {
   line-break: auto;
-  background: #31335e;
+  background: #484848;
   padding: 0.1rem;
   border-radius: 0.2rem;
 }
@@ -69,11 +47,4 @@ code.bg {
 ::selection {
   background: var(--secondary);
   color: var(--background);
-}
-
-@media screen and (max-width: 450px) {
-  html,
-  body {
-    font-size: 16px;
-  }
 }
